Source/WebCore/rendering/HitTestingTransformState.cpp
@@ -73,4 +73,9 @@ FloatQuad HitTestingTransformState::mappedQuad() const
     return m_accumulatedTransform.inverse().projectQuad(m_lastPlanarQuad);
 }
 
+IntRect HitTestingTransformState::boundsOfMappedQuad() const
+{
+    return m_accumulatedTransform.inverse().clampedBoundsOfProjectedQuad(m_lastPlanarQuad);
+}
+
 } // namespace WebCore
