Source/WebCore/rendering/RenderLayer.cpp
@@ -3142,14 +3142,7 @@ RenderLayer* RenderLayer::hitTestLayer(RenderLayer* rootLayer, RenderLayer* cont
         // We can't just map hitTestPoint and hitTestRect because they may have been flattened (losing z)
         // by our container.
         LayoutPoint localPoint = roundedLayoutPoint(newTransformState->mappedPoint());
-        LayoutRect localHitTestRect;
-#if USE(ACCELERATED_COMPOSITING)
-        if (isComposited()) {
-            // It doesn't make sense to project hitTestRect into the plane of this layer, so use the same bounds we use for painting.
-            localHitTestRect = backing()->compositedBounds();
-        } else
-#endif
-            localHitTestRect = newTransformState->mappedQuad().enclosingBoundingBox();
+        LayoutRect localHitTestRect = newTransformState->boundsOfMappedQuad();
 
         // Now do a hit test with the root layer shifted to be us.
         return hitTestLayer(this, containerLayer, request, result, localHitTestRect, localPoint, true, newTransformState.get(), zOffset);
