third_party/WebKit/LayoutTests/transforms/3d/hit-testing/resources/hit-test-utils.js
@@ -1,0 +1,21 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+if (window.layoutTestController)
+  layoutTestController.dumpAsText();
+
+function log(s)
+{
+  var results = document.getElementById('results');
+  results.innerHTML += s + '<br>';
+}
+
+function runTest()
+{
+  for (var i = 0; i < hitTestData.length; ++i) {
+    var test = hitTestData[i];
+    var hit = document.elementFromPoint(test.point[0], test.point[1]);
+    if (hit.id == test.target)
+      log('Element at ' + test.point[0] + ', ' + test.point[1] + ' has id \"' + hit.id  + '\": PASS');
+    else
+      log('Element at ' + test.point[0] + ', ' + test.point[1] + ' is ' + hit.id  + ': FAIL');
+  }
+}
